--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     </head>
     <body>
         <nav>
-            <a href="/index.html">
-                <img class="titleImage" src="/assets/logos/aLa Logo B W ALT.png" alt="aLavey Architecture">
+            <a href="./">
+                <img class="titleImage" src="./assets/logos/aLa Logo B W ALT.png" alt="aLavey Architecture">
             </a>
             <ul>
-                <li class="titleTabButton"><a href="/pages/projects.html">Projects</a></li>
-                <li class="titleTabButton"><a href="/pages/licenses_and_affiliations.html">Licenses & Affiliations</a></li>
-                <li class="titleTabButton"><a href="/pages/about.html">About</a></li>
-                <li class="titleTabButton"><a href="/pages/contact.html">Contact</a></li>
+                <li class="titleTabButton"><a href="./projects.html">Projects</a></li>
+                <li class="titleTabButton"><a href="./licenses_and_affiliations.html">Licenses & Affiliations</a></li>
+                <li class="titleTabButton"><a href="./about.html">About</a></li>
+                <li class="titleTabButton"><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
         <section>
