--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -8,7 +8,7 @@
     <body>
         <nav>
             <a href="/index.html">
-                <img class="titleImage" src="/assets/logos/aLa Logo B W ALT.png" alt="aLavey Architecture">
+                <img class="titleImage" src="../assets/logos/aLa Logo B W ALT.png" alt="aLavey Architecture">
             </a>
             <ul>
                 <li class="titleTabButton"><a href="/pages/projects.html">Projects</a></li>
