--- a/pages/about.html
+++ b/pages/about.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <nav>
-            <a href="/index.html">
+            <a href="index.html">
                 <img class="titleImage" src="../assets/logos/aLa Logo B W ALT.png" alt="aLavey Architecture">
             </a>
             <ul>
