--- a/contact.html
+++ b/contact.html
@@ -2,16 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="styles.css">
         <script src="index.js" defer></script>
     </head>
     <body>
         <nav>
-            <a href="/">
+            <a href="./">
                 <img class="titleImage" src="assets/logos/aLa Logo B W ALT.png" alt="aLavey Architecture">
             </a>
             <ul>
-                <li class="titleTabButton"><a href="projects.html">Projects</a></li>
+                <li class="titleTabButton"><a href="projects">Projects</a></li>
                 <li class="titleTabButton"><a href="licenses_and_affiliations.html">Licenses & Affiliations</a></li>
                 <li class="titleTabButton"><a href="about.html">About</a></li>
                 <li class="titleTabButton"><a href="contact.html">Contact</a></li>
