--- a/gallery.html
+++ b/gallery.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="/styles.css">
-        <script src="/index.js" defer></script>
+        <link rel="stylesheet" href="styles.css">
+        <script src="index.js" defer></script>
     </head>
     <body>
         <nav>
-            <a href="/index.html">
+            <a href="./">
                 <img class="titleImage" src="../assets/logos/aLa Logo B W ALT.png" alt="aLavey Architecture">
             </a>
             <ul>
