--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,9 @@
             </a>
             <ul>
                 <li class="titleTabButton"><a href="projects">Projects</a></li>
-                <li class="titleTabButton"><a href="licenses_and_affiliations.html">Licenses & Affiliations</a></li>
-                <li class="titleTabButton"><a href="about.html">About</a></li>
-                <li class="titleTabButton"><a href="contact.html">Contact</a></li>
+                <li class="titleTabButton"><a href="licenses_and_affiliations">Licenses & Affiliations</a></li>
+                <li class="titleTabButton"><a href="about">About</a></li>
+                <li class="titleTabButton"><a href="contact">Contact</a></li>
             </ul>
         </nav>
         <div class="spacer"></div>
