--- a/gallery.html
+++ b/gallery.html
@@ -8,13 +8,13 @@
     <body>
         <nav>
             <a href="./">
-                <img class="titleImage" src="../assets/logos/aLa Logo B W ALT.png" alt="aLavey Architecture">
+                <img class="titleImage" src="assets/logos/aLa Logo B W ALT.png" alt="aLavey Architecture">
             </a>
             <ul>
-                <li class="titleTabButton"><a href="/pages/projects.html">Projects</a></li>
-                <li class="titleTabButton"><a href="/pages/licenses_and_affiliations.html">Licenses & Affiliations</a></li>
-                <li class="titleTabButton"><a href="/pages/about.html">About</a></li>
-                <li class="titleTabButton"><a href="/pages/contact.html">Contact</a></li>
+                <li class="titleTabButton"><a href="projects">Projects</a></li>
+                <li class="titleTabButton"><a href="licenses_and_affiliations">Licenses & Affiliations</a></li>
+                <li class="titleTabButton"><a href="about">About</a></li>
+                <li class="titleTabButton"><a href="contact">Contact</a></li>
             </ul>
         </nav>
         <div class="imageGallery imageGalleryBig"></div>
