--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
                 <img class="titleImage" src="assets/logos/aLa Logo B W ALT.png" alt="aLavey Architecture">
             </a>
             <ul>
-                <li class="titleTabButton"><a href="projects.html">Projects</a></li>
-                <li class="titleTabButton"><a href="licenses_and_affiliations.html">Licenses & Affiliations</a></li>
-                <li class="titleTabButton"><a href="about.html">About</a></li>
-                <li class="titleTabButton"><a href="contact.html">Contact</a></li>
+                <li class="titleTabButton"><a href="projects">Projects</a></li>
+                <li class="titleTabButton"><a href="licenses_and_affiliations">Licenses & Affiliations</a></li>
+                <li class="titleTabButton"><a href="about">About</a></li>
+                <li class="titleTabButton"><a href="contact">Contact</a></li>
             </ul>
         </nav>
         <section>
