--- a/54_Shore_drive.html
+++ b/54_Shore_drive.html
@@ -2,9 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="/styles.css">
-        <script src="/index.js" defer></script>
-        <!-- <script src="/pages/projects/projects.js" defer></script> -->
+        <link rel="stylesheet" href="styles.css">
+        <script src="index.js" defer></script>
         <script type="module" defer>
             const CURRENT_PROJECT = '54 Shore Drive';
             setUp(CURRENT_PROJECT);
@@ -12,14 +11,14 @@
     </head>
     <body>
         <nav>
-            <a href="/index.html">
-                <img class="titleImage" src="/assets/logos/aLa Logo B W ALT.png" alt="aLavey Architecture">
+            <a href="./">
+                <img class="titleImage" src="assets/logos/aLa Logo B W ALT.png" alt="aLavey Architecture">
             </a>
             <ul>
-                <li class="titleTabButton"><a href="/pages/projects.html">Projects</a></li>
-                <li class="titleTabButton"><a href="/pages/licenses_and_affiliations.html">Licenses & Affiliations</a></li>
-                <li class="titleTabButton"><a href="/pages/about.html">About</a></li>
-                <li class="titleTabButton"><a href="/pages/contact.html">Contact</a></li>
+                <li class="titleTabButton"><a href="projects">Projects</a></li>
+                <li class="titleTabButton"><a href="licenses_and_affiliations">Licenses & Affiliations</a></li>
+                <li class="titleTabButton"><a href="about">About</a></li>
+                <li class="titleTabButton"><a href="contact">Contact</a></li>
             </ul>
         </nav>
         <section>
