--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="/styles.css">
-        <script src="/index.js" defer></script>
+        <script src="index.js" defer></script>
     </head>
     <body>
         <nav>
