--- a/54_Shore_drive.html
+++ b/54_Shore_drive.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css">
         <script src="index.js" defer></script>
         <script type="module" defer>
-            const CURRENT_PROJECT = '54 Shore Drive';
+            const CURRENT_PROJECT = '54_Shore_Drive';
             setUp(CURRENT_PROJECT);
         </script>
     </head>
