--- a/54_Shore_drive.html
+++ b/54_Shore_drive.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles.css">
-        <script src="index.js" defer></script>
-        <script type="module" defer>
+        <script src="index.js"></script>
+        <script type="module">
             const CURRENT_PROJECT = '54_Shore_Drive';
             setUp(CURRENT_PROJECT);
         </script>
