--- a/54_Shore_drive.html
+++ b/54_Shore_drive.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles.css">
         <script src="index.js"></script>
-        <script type="module">
+        <script type="module" defer>
             const CURRENT_PROJECT = '54_Shore_Drive';
             setUp(CURRENT_PROJECT);
         </script>
