--- a/54_Shore_drive.html
+++ b/54_Shore_drive.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles.css">
-        <script src="index.js"></script>
+        <script src="index.js" defer></script>
         <script type="module" defer>
-            const CURRENT_PROJECT = '54_Shore_Drive';
+            const CURRENT_PROJECT = '54 Shore Drive';
             setUp(CURRENT_PROJECT);
         </script>
     </head>
