--- a/54_Shore_drive.html
+++ b/54_Shore_drive.html
@@ -24,6 +24,7 @@
         <section>
             <div class="hero">
                 <div id="hero" class="heroImageProject"></div>
+                <p class="heroText">54 Shore Dr.</i></p>
             </div>
         </section>
         <div class="spacer"></div>
@@ -53,16 +54,6 @@
         <section>
             <div class="hero">
                 <div id="hero" class="heroImageProject d"></div>
-            </div>
-        </section>
-        <section class="projectText">
-            <div class="mainText scrollFadeIn">
-                <p>
-                    Lead designer  -  Adam Lavey
-                </p>
-                <p>
-                    Scheduled build date  -  2026
-                </p>
             </div>
         </section>
         <div class="footer"></div>
