--- a/about.html
+++ b/about.html
@@ -26,17 +26,49 @@
         <div class="spacer"></div>
         <section class="projectText">
             <div class="bigText scrollFadeIn">
-                <h1 id="projectName" class=""></h1>
-                <h3 id="projectSubName"></h3>
+                <h1 id="projectName" class="">With style...</h1>
             </div>
-            <div id="description" class="mainText scrollFadeIn"></div>
+            <div id="description" class="mainText scrollFadeIn">
+                <p>aLAVEY is a company with a mission dedicated to style, individuality, and thoughtful design</p>
+                <p>aLAVEY is a company with a mission dedicated to style, individuality, and thoughtful design</p>
+            </div>
         </section>
-        <div class="spacer"></div>
         <section>
             <div class="hero">
-                <div id="hero" class="heroImageD"></div>
-                <!-- <p class="heroText1"></p> -->
+                <div id="hero" class="heroImageB"></div>
+                <p class="heroText">Built <i>different</i></p>
             </div>
         </section>
+        <section class="projectText">
+            <div class="bigText scrollFadeIn">
+                <h1 id="projectName" class="">With individuality...</h1>
+            </div>
+            <div id="description" class="mainText scrollFadeIn">
+                <p>aLAVEY is a company with a mission dedicated to style, individuality, and thoughtful design</p>
+                <p>aLAVEY is a company with a mission dedicated to style, individuality, and thoughtful design</p>
+            </div>
+        </section>
+        <section>
+            <div class="hero">
+                <div id="hero" class="heroImageProject"></div>
+                <p class="heroText">Built <i>different</i></p>
+            </div>
+        </section>
+        <section class="projectText" style="height: 50%;">
+            <div class="bigText scrollFadeIn">
+                <h1 id="projectName" class="">With care...</h1>
+            </div>
+            <div id="description" class="mainText scrollFadeIn">
+                <p>aLAVEY is proudly dedicated to research and fundraising for Rett Syndrome. Over the years, aLAVEY and its partners have raised over $10,000 to help combat Rett's.</p>
+                <p>For more information, or to contribute, please contact us today or visit the <a href="https://www.google.com" style="color: cadetblue;">Big Hitters Website</a> </p>
+            </div>
+        </section>
+        <section>
+            <div class="hero">
+                <div id="hero" class="heroImageProject"></div>
+                <p class="heroText">Built <i>different</i></p>
+            </div>
+        </section>
+        <div class="footer"></div>
     </body>
 </html>
