--- a/contact.html
+++ b/contact.html
@@ -17,15 +17,14 @@
                 <li class="titleTabButton"><a href="contact">Contact</a></li>
             </ul>
         </nav>
-        <div class="spacer"></div>
         <section>
-            <div class="mainText">
+            <div class="heroImageD"></div>
+            <div class="heroText">
                 <p>Adam Lavey</p>
-                <p>(123) 456 7890</p>
-                <p>contact.example</p>
+                <p>312-203-9009</p>
+                <p>contact@alaveyarchitecture.com</p>
             </div>
-            <div></div>
         </section>
-        <div class="footer"></div>
+        <!-- <div class="footer"></div> -->
     </body>
 </html>
