--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
             </div>
         </section>
         <div class="hero">
-            <!-- <img loading="lazy" class="heroImage" src="assets/buildings/River Line/building F view_1.jpg"> -->
             <div class="heroImageB">
-            <!-- <p class="heroText">Skip the <i>bullshit</i></p> -->
         </div>
         <section class="textOnly alt">
             <div class="mainText scrollFadeIn">
@@ -52,11 +50,11 @@
                     We can put the main text here. aLavey is a company about X with a mission statement that captures minds and hearts alike. Probably.
                 </p>
             </div>
-            <div class="mainText scrollFadeIn">
+            <!-- <div class="mainText scrollFadeIn">
                 <p>
                     We can put the main text here. aLavey is a company about X with a mission statement that captures minds and hearts alike. Probably.
                 </p>
-            </div>
+            </div> -->
         </section>
         <div class="imageGallery"></div>
         <div class="footer"></div>
