--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </ul>
         </nav>
         <section>
-                <div class="heroImageA">
+                <div class="heroImageA"></div>
                 <p class="heroText">Skip the <i>bullsh*t</i></p>
         </section>
         <section class="textOnly">
@@ -36,9 +36,9 @@
                 </p>
             </div>
         </section>
-        <div class="hero">
-            <div class="heroImageB">
-        </div>
+        <section>
+            <div class="heroImageB"></div>
+        </section>
         <section class="textOnly alt">
             <div class="mainText scrollFadeIn">
                 <p>
