--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </ul>
         </nav>
         <section>
-                <div class="heroImageA"></div>
+                <div class="heroImageA mobileHero"></div>
                 <p class="heroText">Skip the <i>bullsh*t</i></p>
         </section>
         <section class="textOnly">
@@ -37,7 +37,7 @@
             </div>
         </section>
         <section>
-            <div class="heroImageB"></div>
+            <div class="heroImageB mobileHero"></div>
         </section>
         <section class="textOnly alt">
             <div class="mainText scrollFadeIn">
