--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </ul>
         </nav>
         <section>
-                <div class="heroImageA mobileHero"></div>
+                <div class="heroImageA"></div>
                 <p class="heroText">Skip the <i>bullsh*t</i></p>
         </section>
         <section class="textOnly">
