--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         </nav>
         <section>
             <div class="heroImageD"></div>
-            <div class="heroText">
+            <div class="heroTextMiddle">
                 <p>Adam Lavey</p>
                 <p>312-203-9009</p>
                 <p>contact@alaveyarchitecture.com</p>
