--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
         </section>
         <section>
             <div class="hero">
-                <div id="hero" class="heroImageProject"></div>
+                <div id="hero" class="heroImageD"></div>
                 <p class="heroText">Built <i>different</i></p>
             </div>
         </section>
