--- a/River Line.html
+++ b/River Line.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css">
         <script src="index.js" defer></script>
         <script type="module" defer>
-            const CURRENT_PROJECT = '54 Shore Drive';
+            const CURRENT_PROJECT = 'River Line';
             setUp(CURRENT_PROJECT);
         </script>
     </head>
@@ -23,8 +23,8 @@
         </nav>
         <section>
             <div class="hero">
-                <div id="hero" class="project1HeroImage"></div>
-                <p class="heroText">54 Shore Dr.</i></p>
+                <div id="hero" class="project3HeroImage"></div>
+                <p class="heroText">River Line</i></p>
             </div>
         </section>
         <div class="spacer"></div>
@@ -38,22 +38,22 @@
         <div class="spacer"></div>
         <section>
             <div class="hero">
-                <div id="hero" class="project1HeroImage a"></div>
+                <div id="hero" class="project3HeroImage a"></div>
             </div>
         </section>
         <section>
             <div class="hero">
-                <div id="hero" class="project1HeroImage b"></div>
+                <div id="hero" class="project3HeroImage b"></div>
             </div>
         </section>
         <section>
             <div class="hero">
-                <div id="hero" class="project1HeroImage c"></div>
+                <div id="hero" class="project3HeroImage c"></div>
             </div>
         </section>
         <section>
             <div class="hero">
-                <div id="hero" class="project1HeroImage d"></div>
+                <div id="hero" class="project3HeroImage d"></div>
             </div>
         </section>
         <div class="footer"></div>
