--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
         </section>
         <section>
             <div class="hero">
-                <div id="hero" class="heroImageProject"></div>
+                <div id="hero" class="project1HeroImage"></div>
                 <p class="heroText">Built <i>different</i></p>
             </div>
         </section>
