--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
         <section>
                 <div class="heroImageA"></div>
-                <p class="heroText">Skip the <i>bullsh*t</i></p>
+                <p class="heroText">Welcome home</p>
         </section>
         <section class="textOnly">
             <div class="bigText scrollFadeIn">
