about fix and css changes

--- a/about.html
+++ b/about.html
@@ -20,7 +20,8 @@
         <section>
             <div class="hero">
                 <div id="hero" class="heroImageC"></div>
-                <p class="heroText">Built <i>different</i></p>
+                <div class="heroText lower" style="background-color: rgb(15, 12, 12);">Built <i>different...</i><br><div style="font-size: 36px;">..."gotta know the rules to break the rules"</div></div>
+                <!-- <h3 class="heroText lower" style="background-color: rgb(15, 12, 12); font-size: 36px;">..."gotta know the rules to break the rules"</h3> -->
             </div>
         </section>
         <div class="spacer"></div>
@@ -36,7 +37,7 @@
         <section>
             <div class="hero">
                 <div id="hero" class="heroImageB"></div>
-                <p class="heroText">Built <i>different</i></p>
+                <!-- <p class="heroText">Built <i>different</i></p> -->
             </div>
         </section>
         <section class="projectText">
@@ -51,7 +52,7 @@
         <section>
             <div class="hero">
                 <div id="hero" class="project1HeroImage"></div>
-                <p class="heroText">Built <i>different</i></p>
+                <!-- <p class="heroText">Built <i>different</i></p> -->
             </div>
         </section>
         <section class="projectText" style="height: 50%;">
@@ -66,7 +67,7 @@
         <section>
             <div class="hero">
                 <div id="hero" class="heroImageD"></div>
-                <p class="heroText">Built <i>different</i></p>
+                <!-- <p class="heroText">Built <i>different</i></p> -->
             </div>
         </section>
         <div class="footer"></div>
