--- a/licenses_and_affiliations.html
+++ b/licenses_and_affiliations.html
@@ -17,6 +17,27 @@
                 <li class="titleTabButton"><a href="contact">Contact</a></li>
             </ul>
         </nav>
-        <div class="spacer"></div>
+        <!-- <div class="spacer"></div> -->
+        <section class="textOnly">
+            <!-- <div class="bigText scrollFadeIn">
+                <h1 class="">
+                    Big, important text
+                </h1>
+                <h3>
+                    and more important text
+                </h3>
+            </div> -->
+            <div class="mainText scrollFadeIn">
+                <ul>
+                    <li>State of Illinois</li>
+                    <li>State of Indiana</li>
+                    <li>Coming soon</li>
+                    <ul>
+                        <li>State of North Carolina</li>
+                        <li>State of Michigan</li>
+                    </ul>
+                </ul>
+            </div>
+        </section>
     </body>
 </html>
