--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,9 @@
         <section>
             <div class="heroImageD"></div>
             <div class="heroTextMiddle">
-                <p>Adam Lavey</p>
-                <p>312-203-9009</p>
-                <p>contact@alaveyarchitecture.com</p>
+                Adam Lavey
+                <br>312-203-9009
+                <br>alavey@alaveyarchitecture.com
             </div>
         </section>
         <!-- <div class="footer"></div> -->
