--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
         <section class="textOnly">
             <div class="bigText scrollFadeIn">
                 <h1 class="">
-                    Big, important text
+                    Mission
                 </h1>
-                <h3>
+                <!-- <h3>
                     and more important text
-                </h3>
+                </h3> -->
             </div>
             <div class="mainText scrollFadeIn">
                 <p>
-                    Mission Statement. Mission Statement. Mission Statement. Mission Statement. Mission Statement. Mission Statement. 
+                    aLAVEYarchitecture is dedicated to each client's style and individuality through thoughtful design
                 </p>
             </div>
         </section>
         <section>
             <div class="heroImageB mobileHero"></div>
         </section>
-        <section class="textOnly alt">
+        <!-- <section class="textOnly alt">
             <div class="mainText scrollFadeIn">
                 <p>
                     We can put the main text here. aLavey is a company about X with a mission statement that captures minds and hearts alike. Probably.
@@ -50,12 +50,7 @@
                     We can put the main text here. aLavey is a company about X with a mission statement that captures minds and hearts alike. Probably.
                 </p>
             </div>
-            <!-- <div class="mainText scrollFadeIn">
-                <p>
-                    We can put the main text here. aLavey is a company about X with a mission statement that captures minds and hearts alike. Probably.
-                </p>
-            </div> -->
-        </section>
+        </section> -->
         <div class="imageGallery"></div>
         <div class="footer"></div>
     </body>
