--- a/Building F.html
+++ b/Building F.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css">
         <script src="index.js" defer></script>
         <script type="module" defer>
-            const CURRENT_PROJECT = 'River Line';
+            const CURRENT_PROJECT = 'Building F';
             setUp(CURRENT_PROJECT);
         </script>
     </head>
