--- a/Building F.html
+++ b/Building F.html
@@ -51,6 +51,11 @@
                 <div id="hero" class="project3HeroImage c"></div>
             </div>
         </section>
+        <section>
+            <div class="hero">
+                <div id="hero" class="project3HeroImage d"></div>
+            </div>
+        </section>
         <div class="footer"></div>
     </body>
 </html>
