--- a/366 St Andre.html
+++ b/366 St Andre.html
@@ -35,7 +35,7 @@
             </div>
             <div id="description" class="mainText scrollFadeIn"></div>
         </section>
-        <div class="spacer"></div>
+        <!-- <div class="spacer"></div>
         <section>
             <div class="hero">
                 <div id="hero" class="project2HeroImage a"></div>
@@ -55,7 +55,7 @@
             <div class="hero">
                 <div id="hero" class="project2HeroImage d"></div>
             </div>
-        </section>
+        </section> -->
         <div class="footer"></div>
     </body>
 </html>
