--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                 <!-- <h3 class="heroText lower" style="background-color: rgb(15, 12, 12); font-size: 36px;">..."gotta know the rules to break the rules"</h3> -->
             </div>
         </section>
-        <div class="spacer"></div>
+        <!-- <div class="spacer"></div> -->
         <section class="projectText">
             <div class="bigText scrollFadeIn">
                 <h1 id="projectName" class="">With style...</h1>
