--- a/about.html
+++ b/about.html
@@ -27,31 +27,15 @@
         <!-- <div class="spacer"></div> -->
         <section class="projectText">
             <div class="bigText scrollFadeIn">
-                <h1 id="projectName" class="">With style...</h1>
+                <h1 id="projectName" class="">About us</h1>
             </div>
             <div id="description" class="mainText scrollFadeIn">
-                <p>aLAVEY is a company with a mission dedicated to style, individuality, and thoughtful design</p>
-                <p>aLAVEY is a company with a mission dedicated to style, individuality, and thoughtful design</p>
+                <p>Coming Soon!</p>
             </div>
         </section>
         <section>
             <div class="hero">
-                <div id="hero" class="heroImageB"></div>
-                <!-- <p class="heroText">Built <i>different</i></p> -->
-            </div>
-        </section>
-        <section class="projectText">
-            <div class="bigText scrollFadeIn">
-                <h1 id="projectName" class="">With individuality...</h1>
-            </div>
-            <div id="description" class="mainText scrollFadeIn">
-                <p>aLAVEY is a company with a mission dedicated to style, individuality, and thoughtful design</p>
-                <p>aLAVEY is a company with a mission dedicated to style, individuality, and thoughtful design</p>
-            </div>
-        </section>
-        <section>
-            <div class="hero">
-                <div id="hero" class="project1HeroImage"></div>
+                <div id="hero" class="heroImageD"></div>
                 <!-- <p class="heroText">Built <i>different</i></p> -->
             </div>
         </section>
@@ -60,13 +44,14 @@
                 <h1 id="projectName" class="">With care...</h1>
             </div>
             <div id="description" class="mainText scrollFadeIn">
-                <p>aLAVEY is proudly dedicated to research and fundraising for Rett Syndrome. Over the years, aLAVEY and its partners have raised over $10,000 to help combat Rett's.</p>
-                <p>For more information, or to contribute, please contact us today or visit the <a href="https://www.google.com" style="color: cadetblue;">Big Hitters Website</a> </p>
+                <p>aLAVEYarchitecture is proudly dedicated to fundraising to benefit research for Rett Syndrome</p>
+                <p>Since 1995, Buddha's Goin' to the Rack, Big Hitters, and its affiliates have raised over $800,000 for the cause through basketball and golf outings</p>
+                <!-- <p>For more information, please visit our <a href="https://www.google.com" style="color: cadetblue;">Big Hitters</a> Facebook group</p> -->
             </div>
         </section>
         <section>
             <div class="hero">
-                <div id="hero" class="heroImageD"></div>
+                <div id="hero" class="heroImageE"></div>
                 <!-- <p class="heroText">Built <i>different</i></p> -->
             </div>
         </section>
