--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
         </section>
         <section>
-            <div class="heroImageB mobileHero"></div>
+            <div class="project1HeroImage b mobileHero"></div>
         </section>
         <!-- <section class="textOnly alt">
             <div class="mainText scrollFadeIn">
