--- a/54 Shore Drive.html
+++ b/54 Shore Drive.html
@@ -56,6 +56,21 @@
                 <div id="hero" class="project1HeroImage d"></div>
             </div>
         </section>
+        <section>
+            <div class="hero">
+                <div id="hero" class="project1HeroImage e"></div>
+            </div>
+        </section>
+        <section>
+            <div class="hero">
+                <div id="hero" class="project1HeroImage f"></div>
+            </div>
+        </section>
+        <section>
+            <div class="hero">
+                <div id="hero" class="project1HeroImage g"></div>
+            </div>
+        </section>
         <div class="footer"></div>
     </body>
 </html>
