--- a/4 Lori Lane.html
+++ b/4 Lori Lane.html
@@ -56,6 +56,11 @@
                 <div id="hero" class="project6HeroImage d"></div>
             </div>
         </section> -->
+        <section>
+            <div class="hero">
+                <div id="hero" class="project6HeroImage e"></div>
+            </div>
+        </section>
         <div class="footer"></div>
     </body>
 </html>
