--- a/261 E Terra Cotta.html
+++ b/261 E Terra Cotta.html
@@ -36,12 +36,12 @@
             <div id="description" class="mainText scrollFadeIn"></div>
         </section>
         <div class="spacer"></div>
-        <!-- <section>
+        <section>
             <div class="hero">
                 <div id="hero" class="project5HeroImage a"></div>
             </div>
         </section>
-        <section>
+        <!-- <section>
             <div class="hero">
                 <div id="hero" class="project5HeroImage b"></div>
             </div>
@@ -56,6 +56,16 @@
                 <div id="hero" class="project5HeroImage d"></div>
             </div>
         </section> -->
+        <section>
+            <div class="hero">
+                <div id="hero" class="project5HeroImage e"></div>
+            </div>
+        </section>
+        <section>
+            <div class="hero">
+                <div id="hero" class="project5HeroImage f"></div>
+            </div>
+        </section>
         <div class="footer"></div>
     </body>
 </html>
