--- a/Miceli Farms.html
+++ b/Miceli Farms.html
@@ -56,6 +56,16 @@
                 <div id="hero" class="project4HeroImage d"></div>
             </div>
         </section>
+        <section>
+            <div class="hero">
+                <div id="hero" class="project4HeroImage e"></div>
+            </div>
+        </section>
+        <section>
+            <div class="hero">
+                <div id="hero" class="project4HeroImage f"></div>
+            </div>
+        </section>
         <div class="footer"></div>
     </body>
 </html>
