mobile changes. meeting 7/14

--- a/Miceli Farms.html
+++ b/Miceli Farms.html
@@ -10,17 +10,7 @@
         </script>
     </head>
     <body>
-        <nav>
-            <a href="./">
-                <img class="titleImage" src="assets/logos/aLa Logo B W ALT.png" alt="aLavey Architecture">
-            </a>
-            <ul>
-                <li class="titleTabButton"><a href="projects">Projects</a></li>
-                <li class="titleTabButton"><a href="licenses_and_affiliations">Licenses & Affiliations</a></li>
-                <li class="titleTabButton"><a href="about">About</a></li>
-                <li class="titleTabButton"><a href="contact">Contact</a></li>
-            </ul>
-        </nav>
+        <nav></nav>
         <section>
             <div class="hero">
                 <div id="hero" class="project4HeroImage"></div>
