--- a/about.html
+++ b/about.html
@@ -6,22 +6,36 @@
         <script src="index.js" defer></script>
     </head>
     <body>
-        <nav>
-            <a href="./">
-                <img class="titleImage" src="assets/logos/aLa Logo B W ALT.png" alt="aLavey Architecture">
-            </a>
-            <ul>
-                <li class="titleTabButton"><a href="projects">Projects</a></li>
-                <li class="titleTabButton"><a href="licenses_and_affiliations">Licenses & Affiliations</a></li>
-                <li class="titleTabButton"><a href="about">About</a></li>
-                <li class="titleTabButton"><a href="contact">Contact</a></li>
-            </ul>
-        </nav>
+        <nav></nav>
         <section>
             <div class="hero">
                 <div id="hero" class="heroImageC"></div>
                 <div class="heroText lower" style="background-color: rgb(15, 12, 12);">Built <i>different...</i><br><div style="font-size: 36px;">..."gotta know the rules to break the rules"</div></div>
                 <!-- <h3 class="heroText lower" style="background-color: rgb(15, 12, 12); font-size: 36px;">..."gotta know the rules to break the rules"</h3> -->
+            </div>
+        </section>
+        <section class="textOnly">
+            <div class="mainText scrollFadeIn">
+                <ul style="font-size: 1.2em;">
+                    <li>Licenses</li>
+                    <ul>
+                        <li>State of Illinois</li>
+                        <li>State of Indiana</li>
+                        <li><u>Coming Soon</u></li>
+                        <ul>
+                            <li>State of North Carolina</li>
+                            <li>State of Michigan</li>
+                        </ul>
+                    </ul>
+                    <li>Affiliations (member)</li>
+                    <ul>
+                        <li>aia Chicago Chapter</li>
+                        <li>NCARB</li>
+                        <li>CTBUH</li>
+                        <li>Chicago Architecture Center</li>
+                    </ul>
+                </ul>
+                
             </div>
         </section>
         <!-- <div class="spacer"></div> -->
@@ -39,13 +53,37 @@
                 <!-- <p class="heroText">Built <i>different</i></p> -->
             </div>
         </section>
+        <!-- <section class="projectText">
+            <div class="bigText scrollFadeIn">
+                <h1 id="projectName" class="">Project Resume</h1>
+            </div>
+            <div id="description" class="mainText scrollFadeIn">
+                <p>1</p>
+                <p>2</p>
+                <p>3</p>
+                <p>4</p>
+                <p>5</p>
+            </div>
+        </section> -->
+        <!-- <section>
+            <div class="simpleImageGroupCaption">801 Financial</div>
+            <div class="simpleImageGallery">
+                <img src="/assets/photography/Sarah/801sFinancial14Dsm.jpg" style="width: 50%; height: 50%;">
+                <img src="/assets/photography/Sarah/801sFinancial14Dsm.jpg" style="width: 50%; height: 50%;">
+                <img src="/assets/photography/Sarah/801sFinancial14Dsm.jpg" style="width: 50%; height: 50%;">
+                <img src="/assets/photography/Sarah/801sFinancial14Dsm.jpg" style="width: 50%; height: 50%;">
+            </div>
+            <div class="simpleImageGroupCaption">project 2</div>
+            <div class="simpleImageGroupCaption">801 Financial</div>
+            <div class="simpleImageGroupCaption">801 Financial</div>
+        </section> -->
         <section class="projectText" style="height: 50%;">
             <div class="bigText scrollFadeIn">
                 <h1 id="projectName" class="">With care...</h1>
             </div>
             <div id="description" class="mainText scrollFadeIn">
                 <p>aLAVEYarchitecture is proudly dedicated to fundraising to benefit research for Rett Syndrome</p>
-                <p>Since 1995, Buddha's Goin' to the Rack, Big Hitters, and its affiliates have raised over $800,000 for the cause through basketball and golf outings</p>
+                <p>Since 1995, Buddha's Goin' to the Rack, Big Hitters, and its affiliates have raised over $500,000 for the cause through basketball and golf outings</p>
                 <!-- <p>For more information, please visit our <a href="https://www.google.com" style="color: cadetblue;">Big Hitters</a> Facebook group</p> -->
             </div>
         </section>
