--- a/261 E Terra Cotta.html
+++ b/261 E Terra Cotta.html
@@ -10,17 +10,7 @@
         </script>
     </head>
     <body>
-        <nav>
-            <a href="./">
-                <img class="titleImage" src="assets/logos/aLa Logo B W ALT.png" alt="aLavey Architecture">
-            </a>
-            <ul>
-                <li class="titleTabButton"><a href="projects">Projects</a></li>
-                <li class="titleTabButton"><a href="licenses_and_affiliations">Licenses & Affiliations</a></li>
-                <li class="titleTabButton"><a href="about">About</a></li>
-                <li class="titleTabButton"><a href="contact">Contact</a></li>
-            </ul>
-        </nav>
+        <nav></nav>
         <section>
             <div class="hero">
                 <div id="hero" class="project5HeroImage"></div>
@@ -41,21 +31,6 @@
                 <div id="hero" class="project5HeroImage a"></div>
             </div>
         </section>
-        <!-- <section>
-            <div class="hero">
-                <div id="hero" class="project5HeroImage b"></div>
-            </div>
-        </section>
-        <section>
-            <div class="hero">
-                <div id="hero" class="project5HeroImage c"></div>
-            </div>
-        </section>
-        <section>
-            <div class="hero">
-                <div id="hero" class="project5HeroImage d"></div>
-            </div>
-        </section> -->
         <section>
             <div class="hero">
                 <div id="hero" class="project5HeroImage e"></div>
