--- a/contact.html
+++ b/contact.html
@@ -6,17 +6,7 @@
         <script src="index.js" defer></script>
     </head>
     <body>
-        <nav>
-            <a href="./">
-                <img class="titleImage" src="assets/logos/aLa Logo B W ALT.png" alt="aLavey Architecture">
-            </a>
-            <ul>
-                <li class="titleTabButton"><a href="projects">Projects</a></li>
-                <li class="titleTabButton"><a href="licenses_and_affiliations">Licenses & Affiliations</a></li>
-                <li class="titleTabButton"><a href="about">About</a></li>
-                <li class="titleTabButton"><a href="contact">Contact</a></li>
-            </ul>
-        </nav>
+        <nav></nav>
         <section>
             <div class="heroImageD"></div>
             <div class="heroTextMiddle">
