--- a/about.html
+++ b/about.html
@@ -11,7 +11,43 @@
             <div class="hero">
                 <div id="hero" class="heroImageC"></div>
                 <div class="heroText lower" style="background-color: rgb(15, 12, 12);">Built <i>different...</i><br><div style="font-size: 36px;">..."gotta know the rules to break the rules"</div></div>
-                <!-- <h3 class="heroText lower" style="background-color: rgb(15, 12, 12); font-size: 36px;">..."gotta know the rules to break the rules"</h3> -->
+            </div>
+        </section>
+        <section class="projectText">
+            <div class="bigText scrollFadeIn">
+                <h1 id="projectName" class="">About us</h1>
+            </div>
+            <div id="description" class="mainText scrollFadeIn">
+                <p>Adam offers more than 35 years of professional experience in residential and commercial building projects of all sizes. Additionally, Adam’s ubiquitous skills serve to empower project stakeholders and team members with both the tools and inspiration to advance project objectives. His efforts have resulted in over 10,000 built dwelling units.</p>
+            </div>
+        </section>
+        <section>
+            <div class="hero">
+                <div id="hero" class="heroImageD"></div>
+            </div>
+        </section>
+        <section class="projectText" style="height: auto;">
+            <div class="bigText scrollFadeIn">
+                <h1 id="projectName" class="">Project Resume</h1>
+            </div>
+            <div>
+                <img src="/assets/files/adam_resume.jpg" style="scale: 80%;">
+            </div>
+        </section>
+        <section style="height: auto;">
+            <div class="simpleImageGroupCaption">801 Financial Place</div>
+            <div class="simpleImageGallery">
+                <img src="/assets/photography/Sarah/801sFinancial14Dsm.jpg" style="width: 50%; height: 50%;">
+                <img src="/assets/photography/Sarah/801sFinancial14Dsm.jpg" style="width: 50%; height: 50%;">
+                <img src="/assets/photography/Sarah/801sFinancial14Dsm.jpg" style="width: 50%; height: 50%;">
+                <img src="/assets/photography/Sarah/801sFinancial14Dsm.jpg" style="width: 50%; height: 50%;">
+            </div>
+            <div class="simpleImageGroupCaption">project 2</div>
+            <div class="simpleImageGallery">
+                <img src="/assets/photography/Sarah/801sFinancial14Dsm.jpg" style="width: 50%; height: 50%;">
+                <img src="/assets/photography/Sarah/801sFinancial14Dsm.jpg" style="width: 50%; height: 50%;">
+                <img src="/assets/photography/Sarah/801sFinancial14Dsm.jpg" style="width: 50%; height: 50%;">
+                <img src="/assets/photography/Sarah/801sFinancial14Dsm.jpg" style="width: 50%; height: 50%;">
             </div>
         </section>
         <section class="textOnly">
@@ -35,48 +71,8 @@
                         <li>Chicago Architecture Center</li>
                     </ul>
                 </ul>
-                
             </div>
         </section>
-        <!-- <div class="spacer"></div> -->
-        <section class="projectText">
-            <div class="bigText scrollFadeIn">
-                <h1 id="projectName" class="">About us</h1>
-            </div>
-            <div id="description" class="mainText scrollFadeIn">
-                <p>Coming Soon!</p>
-            </div>
-        </section>
-        <section>
-            <div class="hero">
-                <div id="hero" class="heroImageD"></div>
-                <!-- <p class="heroText">Built <i>different</i></p> -->
-            </div>
-        </section>
-        <!-- <section class="projectText">
-            <div class="bigText scrollFadeIn">
-                <h1 id="projectName" class="">Project Resume</h1>
-            </div>
-            <div id="description" class="mainText scrollFadeIn">
-                <p>1</p>
-                <p>2</p>
-                <p>3</p>
-                <p>4</p>
-                <p>5</p>
-            </div>
-        </section> -->
-        <!-- <section>
-            <div class="simpleImageGroupCaption">801 Financial</div>
-            <div class="simpleImageGallery">
-                <img src="/assets/photography/Sarah/801sFinancial14Dsm.jpg" style="width: 50%; height: 50%;">
-                <img src="/assets/photography/Sarah/801sFinancial14Dsm.jpg" style="width: 50%; height: 50%;">
-                <img src="/assets/photography/Sarah/801sFinancial14Dsm.jpg" style="width: 50%; height: 50%;">
-                <img src="/assets/photography/Sarah/801sFinancial14Dsm.jpg" style="width: 50%; height: 50%;">
-            </div>
-            <div class="simpleImageGroupCaption">project 2</div>
-            <div class="simpleImageGroupCaption">801 Financial</div>
-            <div class="simpleImageGroupCaption">801 Financial</div>
-        </section> -->
         <section class="projectText" style="height: 50%;">
             <div class="bigText scrollFadeIn">
                 <h1 id="projectName" class="">With care...</h1>
@@ -84,13 +80,11 @@
             <div id="description" class="mainText scrollFadeIn">
                 <p>aLAVEYarchitecture is proudly dedicated to fundraising to benefit research for Rett Syndrome</p>
                 <p>Since 1995, Buddha's Goin' to the Rack, Big Hitters, and its affiliates have raised over $500,000 for the cause through basketball and golf outings</p>
-                <!-- <p>For more information, please visit our <a href="https://www.google.com" style="color: cadetblue;">Big Hitters</a> Facebook group</p> -->
             </div>
         </section>
         <section>
             <div class="hero">
                 <div id="hero" class="heroImageE"></div>
-                <!-- <p class="heroText">Built <i>different</i></p> -->
             </div>
         </section>
         <div class="footer"></div>
